--- a/src/app.css
+++ b/src/app.css
@@ -15,8 +15,9 @@ body {
 
 a {
   text-decoration: none;
-  color: #108db8;
+  color: black;
   font-weight: bold;
+  float: right;
 }
 
 img {
@@ -26,12 +27,14 @@ img {
 nav {
   width: 100%;
   background: #4361EE;
+ 
 }
 
 nav a {
   color: black;
   padding: 1rem;
-  display: inline-block;
+  display: inline-block right;
+
 }
 
 .content {
